base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: thundertech
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: ghcr.io/alphabraga/juris-site:5703b054de6f88d3ffad265406ae0f6d4368a94a
        ports:
        - containerPort: 80
