base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: thundertech
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
